--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,9 +1,9 @@
 # main links
 main:
    - title: "About"
-     url: https://robrtplant.github.io/about
-  # - title: "Sample Posts"
-  #   url: /year-archive/
+     url: /about
+   - title: "Blog"
+     url: /year-archive/
   # - title: "Sample Collections"
   #   url: /collection-archive/
   # - title: "Sitemap"
